# dynamic-pricing

./: .pdm.toml  Dockerfile  README.md  app_config.toml  pyproject.toml  requirements.txt
docs/: app_github.md  app_idea_page1.md  app_idea_page2.md
notebooks/: experiment-dynamic-pricing.ipynb  generate-auth-passwords.ipynb
src/: Main.py  app_config.toml  auth.yaml  helper_functions.py  sidebar.py
src/pages/: 0_💡_Idea.py
