[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "notebook>=6.5.3",
    "pytest>=7.2.2",
    "pytest-reqs>=0.2.1",
    "black>=23.1.0",
    "itables>=1.5.1",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "streamlit>=1.20.0",
    "watchdog>=2.3.1",
    "tomli>=2.0.1",
    "streamlit-authenticator>=0.2.1",
    "scikit-learn>=1.2.2",
]
requires-python = ">=3.9.8"
license = {text = "MIT"}
